Tweaking application startup scripts.  Added file logging.